# computer-graphics

./: README.md
opengl/: CMakeLists.txt
opengl/cmake/: FindGLFW3.cmake
opengl/scenes/: cornellBox2.xml  cornellBoxTarea2c.xml  cornellBoxTarea2c2.xml  sphere.xml
opengl/shaders/: per_pixel.frag  per_pixel.vert
opengl/shaders/per_pixel/: line.frag  line.vert  no_tex.frag  no_tex.vert  normal.frag  normal.vert  shader.frag  shader.vert  tex.frag  tex.vert
opengl/shaders/per_vertex/: per_vertex.frag  per_vertex.vert
opengl/src/: main.cpp
opengl/src/animation/: animation.cpp  animation.h  curve.cpp  curve.h  spline.cpp  spline.h
opengl/src/game/: gameengine.cpp  gameengine.h  gameobject.cpp  gameobject.h
opengl/src/game/physics/: physicsengine.cpp  physicsengine.h
opengl/src/handlers/: control.cpp  control.h
opengl/src/model/: material.cpp  material.h  model.cpp  model.h  texture.cpp  texture.h
opengl/src/physics/: engine.cpp  engine.h
opengl/src/renderer/: params.cpp  params.h  renderer.cpp  renderer.h  shadowrenderer.cpp  shadowrenderer.h
opengl/src/scene/: camera.cpp  camera.h  light.cpp  light.h  scene.cpp  scene.h
opengl/src/shader/: shader.cpp  shader.h
opengl/src/utils/: cmdline.cpp  cmdline.h  debug_utils.cpp  debug_utils.h  debugutils.cpp  debugutils.h  objloader.cpp  objloader.h  settings.cpp  settings.h  vboindexer.cpp  vboindexer.h  xml_loader.cpp  xml_loader.h  xmlloader.cpp  xmlloader.h
opengl/tests/: 01_simple.cpp  CMakeLists.txt  glm_test.cpp
raytracing/Renderer/: Program.cs  RaytraceRenderer.cs
raytracing/Renderer/Properties/: Settings.Designer.cs
raytracing/Renderer/Scenes/: cornellBox.xml  sphere.xml
raytracing/SceneLib/Properties/: AssemblyInfo.cs
raytracing/SceneLib/SceneObjects/: Plane.cs  SceneCylinder.cs  SceneTriangle.cs
raytracing/csharp/: Renderer.sln
raytracing/csharp/Renderer/: Renderer.cs
raytracing/csharp/Renderer/Properties/: Resources.Designer.cs
raytracing/csharp/Renderer/Scenes/: cornellBox_1.xml
raytracing/csharp/SceneLib/: Scene.cs  SceneLib.csproj  Vector.cs
raytracing/csharp/SceneLib/SceneObjects/: SceneTable.cs
raytracing/matlab/: graphics.m
src/: Renderer.sln
src/Renderer/: OpenGLRenderer.cs  Paralell.cs  Program.cs  RasterizedVertex.cs  RaytraceRenderer.cs  Renderer.cs  Renderer.csproj  TransformationRenderer.cs  Utils.cs
src/Renderer/Properties/: Resources.Designer.cs  Settings.Designer.cs
src/Renderer/Scenes/: cornellBox.xml  cornellBox2.xml  cornellBox_1.xml  cylinder.xml  desktop.xml  mirrorTest.xml  rasterTest.xml  sphere.xml  testScene.xml  viewTest.xml
src/SceneLib/: HitRecord.cs  MathUtils.cs  Matrix.cs  Ray.cs  RenderingParameters.cs  Scene.cs  SceneLib.csproj  SceneSphere.cs  SceneUtils.cs  TextureHandler.cs  Vector.cs
src/SceneLib/Properties/: AssemblyInfo.cs
src/SceneLib/SceneObjects/: Plane.cs  SceneCylinder.cs  SceneObject.cs  SceneSphere.cs  SceneTable.cs  SceneTorus.cs  SceneTriangle.cs
t2/src/Renderer/: Renderer.csproj  TransformationRenderer.cs
t2/src/Renderer/Scenes/: cylinder.xml  mirrorTest.xml  testScene.xml
t2/src/SceneLib/: HitRecord.cs  MathUtils.cs  Ray.cs  RenderingParameters.cs
t2/src/SceneLib/SceneObjects/: SceneObject.cs  SceneSphere.cs
t3/src/cpp/: CMakeLists.txt
t3/src/cpp/cmake/: FindGLFW3.cmake
t3/src/cpp/shaders/: basic.vert  per_pixel.vert  per_vertex.frag
t3/src/cpp/src/: camera.cpp  camera.h  event_handlers.cpp  main.cpp  scene.h  shader.cpp  shader.h
t3/src/cpp/src/handlers/: control.cpp  control.h
t3/src/cpp/src/model/: material.h  model.cpp  model.h
t3/src/cpp/src/scene/: light.cpp  light.h  scene.cpp  scene.h
t3/src/cpp/src/shader/: shader.cpp  shader.h  shader_params.h
t3/src/cpp/tests/: 01_simple.cpp  glm_test.cpp
t3/src/csharp/: OpenGL.sln
t3/src/csharp/OpenGL/: OpenGL.csproj  Program.cs  RenderUtils.cs
t3/src/csharp/OpenGL/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
t3/src/csharp/OpenGL/Shaders/: Basic.frag  Basic.vert
t3/src/csharp/SceneLib/: MathUtils.cs  Matrix.cs  RenderingParameters.cs  Scene.cs  SceneLib.csproj  SceneUtils.cs  Vector.cs
